# nvda-misc-deps

./: .gitignore  .python-version  .python-versions  pyproject.toml  readme.md
include/AcrobatAccess/: AcrobatAccess.idl
include/ISimpleDOM/: AccessibleMarshalThunk.c
include/mathPlayer/: MathPlayerDLL.idl  MathSpeechEnums.idl
python/: brlapi.cp313-win_amd64.pyd  brlapi.cp37-win32.pyd  brlapi.cp38-win32.pyd  brlapi.pyd  ftdi2.py  txt2tags.py
python/lxml/: _elementpath.pyd  builder.pyd  etree.pyd  lxml.etree.h  lxml.etree_api.h  objectify.pyd
python/lxml/html/: clean.pyd  diff.pyd
python/lxml/includes/: lxml-version.h
python/wx/: __init__.py  __version__.py  _activex.pyd  _adv.pyd  _animate.pyd  _aui.pyd  _calendar.pyd  _combo.pyd  _controls.py  _controls_.pyd  _core.py  _core_.pyd  _dataview.pyd  _gdi.py  _gdi_.pyd  _gizmos.pyd  _glcanvas.pyd  _grid.pyd  _html.pyd  _html2.pyd  _media.pyd  _misc.py  _misc_.pyd  _msw.pyd  _propgrid.pyd  _ribbon.pyd  _richtext.pyd  _stc.pyd  _webkit.pyd  _windows.py  _windows_.pyd  _wizard.pyd  _xml.pyd  _xrc.pyd  adv.py  aui.py  calendar.py  combo.py  core.py  dataview.py  (+16 more)
python/wx/lib/: CDate.py  activex.py  activexwrapper.py  anchors.py  busy.py  buttons.py  calendar.py  colourdb.py  colourselect.py  colourutils.py  combotreebox.py  delayedresult.py  dialogs.py  docview.py  embeddedimage.py  eventStack.py  eventwatcher.py  evtmgr.py  expando.py  fancytext.py  filebrowsebutton.py  flashwin.py  graphics.py  gridmovers.py  grids.py  iewin.py  imagebrowser.py  imageutils.py  intctrl.py  (+38 more)
source/typelibs/: FlashAccessibility.tlb
(+361 files in other folders)
