[project]
name = "nvda-misc-deps"
version = "20250925"
readme = "readme.md"
requires-python = ">=3.13,<3.14"

[project.urls]
Homepage = "https://www.nvaccess.org/"
Repository = "https://github.com/nvaccess/nvda-misc-deps.git"

[build-system]
requires = ["setuptools~=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true
